Revision history for Dist-Zilla-Plugin-ModuleBuildTiny

{{$NEXT}}

0.003     2013-03-04 14:10:35 Europe/Amsterdam
          Require the author's version of Module::Build::Tiny by default.

0.002     2011-05-02 09:18:37 Europe/Bucharest
          Increase default minimal version of Module::Build::Tiny to 0.007 to avoid configure time issues

0.001     2011-04-29 16:38:02 Europe/Bucharest
          Initial release