@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-ModuleBuildTiny
 
 {{$NEXT}}
+          Add «use $minimum_perl;» statement to Build.PL and minimum_perl attribute to plugin
 
 0.003     2013-03-04 14:10:35 Europe/Amsterdam
           Require the author's version of Module::Build::Tiny by default.
